# Torrent-CLI

./: CMakeLists.txt  README.md
docs/: build.md
src/: main.cpp
src/torrent/: torrent.cpp  torrent.h
